--- a/lesson_01/package.json
+++ b/lesson_01/package.json
@@ -4,8 +4,16 @@
   "description": "first-steps",
   "main": "index.js",
   "scripts": {
+    "start-one": "cross-env NODE_ENV=one PORT=3000 node index --join, --reverse",
+    "start-two": "cross-env NODE_ENV=two PORT=3001 node index",
+    "start-three": "cross-env NODE_ENV=three PORT=3002 node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cross-env": "^5.2.0",
+    "minimist": "^1.2.0",
+    "yargs": "^13.2.2"
+  }
 }
