--- a/lesson_01/package.json
+++ b/lesson_01/package.json
@@ -4,9 +4,9 @@
   "description": "first-steps",
   "main": "index.js",
   "scripts": {
-    "start-red": "cross-env NODE_ENV=red PORT=3000 node index --color red --bg",
-    "start-green": "cross-env NODE_ENV=green PORT=3001 node index --color green",
-    "start-blue": "cross-env NODE_ENV=blue PORT=3002 node index --console-beautify",
+    "start-red": "cross-env NODE_ENV=red PORT=3000 nodemon node index --color red --bg",
+    "start-green": "cross-env NODE_ENV=green PORT=3001  nodemon node index --color green",
+    "start-blue": " cross-env NODE_ENV=blue PORT=3002 nodemon node index --console-beautify",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -18,6 +18,8 @@
     "cross-env": "^5.2.0",
     "is-plain-object": "^2.0.4",
     "minimist": "^1.2.0",
+    "nodemon": "^1.18.10",
+    "ora": "^3.2.0",
     "yargs": "^13.2.2"
   }
 }
