--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Created by https://www.gitignore.io/api/node,windows,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=node,windows,visualstudiocode
 
+*.txt
 ### Node ###
 # Logs
 logs
