--- a/lesson_02/package.json
+++ b/lesson_02/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.3.3",
     "cross-env": "^5.2.0",
     "minimist": "^1.2.0",
     "nodemon": "^1.18.10"
