--- a/lesson_02/package.json
+++ b/lesson_02/package.json
@@ -4,7 +4,7 @@
   "description": "first-steps",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=dev nodemon node index"
+    "start": "cross-env NODE_ENV=dev nodemon index"
   },
   "author": "",
   "license": "ISC",
